--- a/supplementary-material/latexFiles/pNE2.tex
+++ b/supplementary-material/latexFiles/pNE2.tex
@@ -1,5 +1,5 @@
 \begin{align}
-    \mathrm{pNE2} =&\frac{1}{\pi} \left(\;\;\int\limits_{\frac{\pi}{2}}^{\frac{\theta}{2}}2 r\;\mathrm{d}x_{1}+\int\limits_{\frac{\theta}{2}}^{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}r + r \cos{\left (- x_{1} + \frac{\theta}{2} \right )}\;\mathrm{d}x_{1}\right.\notag\\
- &\left.+\int\limits_{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}^{2 \pi - \frac{\theta}{2}}r + r \cos{\left (x_{1} + \frac{\theta}{2} \right )}\;\mathrm{d}x_{1}+\int\limits_{2 \pi - \frac{\theta}{2}}^{\frac{3 \pi}{2}}2 r\;\mathrm{d}x_{1}\right)\label{pNE2Def}\\
-    \mathrm{pNE2} =& \frac{r}{\pi} \left(\theta - \cos{\left (\frac{\alpha}{2} \right )} + \cos{\left (\frac{\alpha}{2} + \theta \right )}\right)\label{pNE2Sln}
+    \bar{p}_{\text{\tiny{NE2}}} =&\frac{1}{\pi} \left(\;\;\int\limits_{\frac{\pi}{2}}^{\frac{\theta}{2}}2 r\;\mathrm{d}x_{1}+\int\limits_{\frac{\theta}{2}}^{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}r \cos{\left (\frac{\theta}{2} - x_{1} \right )} + r\;\mathrm{d}x_{1}\right.\notag\\
+ &\left.+\int\limits_{\frac{5 \pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2}}^{2 \pi - \frac{\theta}{2}}r \cos{\left (\frac{\theta}{2} + x_{1} \right )} + r\;\mathrm{d}x_{1}+\int\limits_{2 \pi - \frac{\theta}{2}}^{\frac{3 \pi}{2}}2 r\;\mathrm{d}x_{1}\right)\label{pNE2Def}\\
+    \bar{p}_{\text{\tiny{NE2}}}  =& \frac{r}{\pi} \left(\theta - \cos{\left (\frac{\alpha}{2} \right )} + \cos{\left (\frac{\alpha}{2} + \theta \right )}\right)\label{pNE2Sln}
 \end{align}
