--- a/supplementary-material/latexFiles/pSW2.tex
+++ b/supplementary-material/latexFiles/pSW2.tex
@@ -1,5 +1,5 @@
 \begin{align}
-    \mathrm{pSW2} =&\frac{1}{\pi} \left(\;\;\int\limits_{\frac{\pi}{2} - \frac{\theta}{2} + \frac{\alpha}{2}}^{\frac{\pi}{2}}2 r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_{2}+\int\limits_{\frac{\theta}{2}}^{\frac{\pi}{2} - \frac{\theta}{2} + \frac{\alpha}{2}}- r \cos{\left (x_{2} + \frac{\theta}{2} \right )} + r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_{2}\right.\notag\\
- &\left.+\int\limits_{0}^{- \frac{\pi}{2} + \theta}- r \cos{\left (- x_{4} + \theta \right )} + r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_{4}+\int\limits_{- \frac{\pi}{2} + \theta}^{- \frac{\pi}{2} + \theta + \frac{\alpha}{2}}r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_{4}\right)\label{pSW2Def}\\
-    \mathrm{pSW2} =& \frac{r}{\pi} \left(\theta \sin{\left (\frac{\alpha}{2} \right )} - \cos{\left (\frac{\alpha}{2} \right )} + 1\right)\label{pSW2Sln}
+    \bar{p}_{\text{\tiny{SW2}}} =&\frac{1}{\pi} \left(\;\;\int\limits_{\frac{\alpha}{2} - \frac{\theta}{2} + \frac{\pi}{2}}^{\frac{\pi}{2}}2 r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_{2}+\int\limits_{\frac{\theta}{2}}^{\frac{\alpha}{2} - \frac{\theta}{2} + \frac{\pi}{2}}r \sin{\left (\frac{\alpha}{2} \right )} - r \cos{\left (\frac{\theta}{2} + x_{2} \right )}\;\mathrm{d}x_{2}\right.\notag\\
+ &\left.+\int\limits_{0}^{\theta - \frac{\pi}{2}}r \sin{\left (\frac{\alpha}{2} \right )} - r \cos{\left (\theta - x_{4} \right )}\;\mathrm{d}x_{4}+\int\limits_{\theta - \frac{\pi}{2}}^{\frac{\alpha}{2} + \theta - \frac{\pi}{2}}r \sin{\left (\frac{\alpha}{2} \right )}\;\mathrm{d}x_{4}\right)\label{pSW2Def}\\
+    \bar{p}_{\text{\tiny{SW2}}}  =& \frac{r}{\pi} \left(\theta \sin{\left (\frac{\alpha}{2} \right )} - \cos{\left (\frac{\alpha}{2} \right )} + 1\right)\label{pSW2Sln}
 \end{align}
